# Cliente-Servidor_HTTP

./: CMakeLists.txt  Makefile  README.md
Client/: Makefile  README.md
Client/include/: DNS.h  client.h  libSockets.h  main.h
Client/source/: DNS.c  client.c  main.c
Server/: Makefile  README.md
Server/html/: index.html
Server/include/: handleHTTP.h  main.h  server.h
Server/root/: index.html
Server/root/documentos/projetos/: hello.txt
Server/source/: handleHTTP.c  main.c  server.c
html/: index.html
include/: handleHTTP.h  handleHTTP.hpp  libSockets.h  main.h  main.hpp  mimeType.h  server.h  server.hpp
source/: handleHTTP.c  main.c  main.cpp  server.c  server.cpp
